--- a/.env.example
+++ b/.env.example
@@ -117,7 +117,7 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ########################################
 
 # The LobeChat agents market index url
-# AGENTS_INDEX_URL=https://chat-agents.theforage.cn
+# AGENTS_INDEX_URL=https://chat-agents.lobehub.com
 
 ########################################
 ############ Plugin Service ############
