--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         run: |-
           git diff
           git config --global user.name "lobehubbot"
-          git config --global user.email "i@lobehub.com"
+          git config --global user.email "nextprofessionalpower@gmail.com"
           git add .
           git commit -m "📝 docs(bot): Auto sync agents & plugin to readme" || exit 0
           git push
