--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -4,7 +4,7 @@ env:
   TOKEN_NAME: 'GH_TOKEN'
   REPO_BRANCH: 'lobehub/lobe-chat lighthouse'
   USER_NAME: 'lobehubbot'
-  USER_EMAIL: 'i@lobehub.com'
+  USER_EMAIL: 'nextprofessionalpower@gmail.com'
   AUDIT_TYPE: 'both'
   MOBILE_LIGHTHOUSE_PARAMS: '--throttling.cpuSlowdownMultiplier=2'
   DESKTOP_LIGHTHOUSE_PARAMS: '--preset=desktop --throttling.cpuSlowdownMultiplier=1'
