--- a/.env.example
+++ b/.env.example
@@ -124,7 +124,7 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ########################################
 
 # The AiPMChat plugins store index url
-# PLUGINS_INDEX_URL=https://chat-plugins.lobehub.com
+# PLUGINS_INDEX_URL=https://chat-plugins.theforage.cn
 
 # set the plugin settings
 # the format is `plugin-identifier:key1=value1;key2=value2`, multiple settings fields are separated by semicolons `;`, multiple plugin settings are separated by commas `,`.
