--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     ]
   },
   "dependencies": {
+    "@aipmorg/chat-plugin-sdk": "^1.32.3",
+    "@aipmorg/chat-plugins-gateway": "^1.9.0",
     "@ant-design/icons": "^5.3.7",
     "@anthropic-ai/sdk": "^0.24.0",
     "@auth/core": "0.28.0",
@@ -106,8 +108,6 @@
     "@google/generative-ai": "^0.13.0",
     "@icons-pack/react-simple-icons": "^9.5.0",
     "@khmyznikov/pwa-install": "^0.3.9",
-    "@lobehub/chat-plugin-sdk": "^1.32.3",
-    "@lobehub/chat-plugins-gateway": "^1.9.0",
     "@lobehub/icons": "^1.23.0",
     "@lobehub/tts": "^1.24.1",
     "@lobehub/ui": "^1.144.3",
