--- a/package.json
+++ b/package.json
@@ -98,7 +98,6 @@
   "dependencies": {
     "@aipmorg/chat-plugin-sdk": "^1.32.3",
     "@aipmorg/chat-plugins-gateway": "^1.9.0",
-    "@aipmorg/icons": "^1.25.2",
     "@aipmorg/ui": "^1.145.8",
     "@ant-design/icons": "^5.3.7",
     "@anthropic-ai/sdk": "^0.24.3",
@@ -115,6 +114,7 @@
     "@google/generative-ai": "^0.14.1",
     "@icons-pack/react-simple-icons": "^9.6.0",
     "@khmyznikov/pwa-install": "^0.3.9",
+    "@lobehub/icons": "^1.26.0",
     "@lobehub/tts": "^1.24.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@neondatabase/serverless": "^0.9.4",
